--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <button class="tab-btn" data-tab="report">Report</button>
             <button class="tab-btn" data-tab="minutes">Meeting Minutes</button>
             <button class="tab-btn" data-tab="action-items">Action Items</button>
+            <button class="tab-btn" data-tab="invoices">Invoices</button>
             <button class="tab-btn" data-tab="previous-reports">Previous Reports</button>
         </nav>
 
@@ -502,6 +503,13 @@
                 </div>
             </div>
         </div>
+
+        <div id="invoices-page" class="tab-content" style="display: none;">
+            <div class="instructions-content">
+               <h2>Invoices</h2>
+               <p>This section is under construction. Invoice tracking functionality will be available here in a future update.</p>
+           </div>
+       </div>
 
         <div id="previous-reports-page" class="tab-content" style="display: none;">
              <div class="previous-reports-container">
