--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <div class="title-container">
                 <h1>GasEng-PMT  Gas Engineering Project Management Tool</h1>
-                <p class="subtitle">Written by Tim Bickford - Rev 4.0 Beta</p>
+                <p class="subtitle">Written by Tim Bickford - Rev 1.1 9-24-2025</p>
             </div>
             <div id="notification-container" class="notification-container">
                 <button id="notification-bell" aria-label="Notifications" data-tooltip="Show recent notifications for overdue and upcoming tasks.">
