--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <div class="title-container">
                 <h1>GasEng-PMT  Gas Engineering Project Management Tool</h1>
-                <p class="subtitle">Written by Tim Bickford - Rev 1.1 9-24-2025</p>
+                <p class="subtitle">Written by Tim Bickford - Rev 1.0 Beta</p>
             </div>
             <div id="notification-container" class="notification-container">
                 <button id="notification-bell" aria-label="Notifications" data-tooltip="Show recent notifications for overdue and upcoming tasks.">
@@ -35,6 +35,7 @@
             <button class="tab-btn" data-tab="minutes">Meeting Minutes</button>
             <button class="tab-btn" data-tab="action-items">Action Items</button>
             <button class="tab-btn" data-tab="invoices">Invoices</button>
+            <button class="tab-btn" data-tab="change-orders">Change Orders</button>
             <button class="tab-btn" data-tab="previous-reports">Previous Reports</button>
         </nav>
 
@@ -408,6 +409,27 @@
                     </table>
                 </div>
 
+                <!-- Change Orders -->
+                <div class="report-section" id="report-change-orders">
+                    <h3>Change Orders</h3>
+                    <div class="table-wrapper">
+                        <table id="change-orders-table-report" class="data-table">
+                            <thead>
+                                <tr>
+                                    <th>Name / Title</th>
+                                    <th>Description</th>
+                                    <th>Date</th>
+                                    <th>Amount</th>
+                                    <th>Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <!-- Populated by JavaScript -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
                 <!-- Meeting Minutes -->
                 <div class="report-section" id="report-meeting-minutes">
                     <h3>Meeting Minutes</h3>
@@ -537,6 +559,8 @@
                 </div>
             </div>
        </div>
+
+        <div id="change-orders-page" class="tab-content" style="display: none;"></div>
 
         <div id="previous-reports-page" class="tab-content" style="display: none;">
              <div class="previous-reports-container">
